Bug 1435803: Loosen an assertion that may not hold on the old style system. r=dbaron

MozReview-Commit-ID: HThEZ5k0Nxf